...
                                      ),
                                    )
                                ],
                                cancelButton: CupertinoActionSheetAction(
                                  onPressed: () => Navigator.pop(newContext),
                                  child: const Text(
                                    'Cancel',
                                    style: TextStyle(
                                        color: CupertinoColors.systemRed),
                                  ),
                                ),
                              );
                            },
...
                onTap: () {
                  Navigator.of(context).push(
                    CupertinoPageRoute(
                      builder: (context) => ShowEventMembersPage(
                        eventId: widget.eventId,
                        detailId: widget.detailId,
                        admin: event.admin,
                      ),
                    ),
                  );
                },
                child: Text(
                  detail.members!.length > 1 ? "Participants" : "Participant",
                  style: CupertinoTheme.of(context)
                      .textTheme
                      .textStyle
                      .copyWith(
                          color: CupertinoColors.systemGrey,
                          fontWeight: FontWeight.bold),
...
                      debugPrint(message);
                      if (!context.mounted) return;
                      showCupertinoDialog(
                        context: context,
                        builder: (BuildContext newContext) {
                          return CupertinoAlertDialog(
                            title: const Text('Error'),
                            content: Text(message),
                            actions: <Widget>[
                              CupertinoDialogAction(
                                child: const Text('Ok'),
                                onPressed: () {
                                  ref.invalidate(eventProvider(event.id!));
                                  ref.invalidate(joinedEventsProvider(uid));
                                  ref.invalidate(createdEventsProvider(uid));
                                  Navigator.of(newContext).pop();

...
                  },
                  child: Text(
                    detail.members!.contains(uid)
                        ? "Unsubscribe"
                        : detail.requests!.contains(uid)
                            ? "Requested"
                            : "Subscribe",
                    style: const TextStyle(
                      color: CupertinoColors.white,
                    ),
                  ),
                ),
              const SizedBox(height: 30),
...
                  },
                  child: Row(
                    children: [
                      Icon(CupertinoIcons.calendar_badge_plus,
                          color: CupertinoTheme.of(context).primaryColor),
                      const SizedBox(width: 5),
                      Text('Add to calendar',
                          style: TextStyle(
                              color: CupertinoTheme.of(context).primaryColor,
                              fontWeight: FontWeight.bold)),
                    ],
                  ),
                ),
...
                                        context: context,
                                        builder: (newContext) =>
                                            CupertinoAlertDialog(
                                          title:
                                              const Text('Date cancellation'),
                                          content: const Text(
                                              'Are you sure you want to delete this date?'),
                                          actions: <Widget>[
                                            CupertinoDialogAction(
                                              child: const Text('No'),
                                              onPressed: () =>
                                                  Navigator.of(newContext)
                                                      .pop(),
                                            ),
                                            CupertinoDialogAction(
                                              child: const Text('Yes'),
                                              onPressed: () async {
                                                await delete(
                                                    newContext,
                                                    databaseService,
                                                    notificationService,
                                                    event);
...
