...
                onPressed: () {
                  Navigator.of(context).pop();
                },
              )
            : null,
        middle: Text(
          'Event',
          style: TextStyle(
              color: CupertinoTheme.of(context).primaryColor, fontSize: 18),
        ),
      ),
      child: Column(
        children: [
...
                                      ),
                                      title: Column(
                                        crossAxisAlignment:
                                            CrossAxisAlignment.start,
                                        children: [
                                          Text(
                                            '${DateFormat('dd/MM/yyyy').format(detail.startDate!)} - ${DateFormat('dd/MM/yyyy').format(detail.endDate!)}',
                                          ),
                                          Text(
                                            detail.location!,
                                            style: const TextStyle(
                                              fontSize: 16,
                                            ),
...
                                      CupertinoListTile(
                                        trailing:
                                            const Icon(CupertinoIcons.forward),
                                        title: const Row(children: [
                                          Icon(CupertinoIcons.pencil),
                                          SizedBox(width: 10),
                                          Text('Edit Event'),
                                        ]),
                                        onTap: () {
                                          ref.invalidate(
                                              eventProvider(widget.eventId));
                                          ref.invalidate(
                                              createdEventsProvider(uid));
...
                                              CupertinoIcons.forward),
                                          title: const Row(
                                            children: [
                                              Icon(CupertinoIcons.trash),
                                              SizedBox(width: 10),
                                              Text(
                                                'Delete Event',
                                              ),
                                            ],
                                          ),
                                          onTap: () {
                                            showCupertinoDialog(
                                              context: context,
                                              builder: (newContext) =>
                                                  CupertinoAlertDialog(
                                                title:
                                                    const Text('Delete Event'),
                                                content: const Text(
                                                    'Are you sure you want to delete this event?'),
                                                actions: <Widget>[
                                                  CupertinoDialogAction(
                                                    child: const Text('No'),
                                                    onPressed: () =>
                                                        Navigator.of(newContext)
                                                            .pop(),
...
