...
            },
            child: Container(
              decoration: BoxDecoration(
                borderRadius: BorderRadius.circular(10),
              ),
              child: Text(
                'Set New Photo',
                style: TextStyle(
                    color:
                        CupertinoTheme.of(context).textTheme.textStyle.color),
              ),
            ),
          ),
          CupertinoActionSheetAction(
            child: Container(
                decoration: BoxDecoration(
                  borderRadius: BorderRadius.circular(10),
                ),
                child: const Text(
                  'Remove Photo',
                  style: TextStyle(color: CupertinoColors.systemRed),
                )),
            onPressed: () {
              setState(() {
                _selectedImagePath = Uint8List(0);
                widget.imageInsertPageKey(_selectedImagePath);
...
