...
                      Navigator.of(buildContext).pop();
                    }
                    if (context.mounted) Navigator.of(context).pop();
                  }
                },
                child: Text(
                  'Done',
                  style: TextStyle(
                    fontWeight: FontWeight.bold,
                    color: CupertinoTheme.of(context).primaryColor,
                  ),
                ))),
        child: _buildSettingsPage(user));
...
    await databaseService.updateUserInformation(
      UserData(
        categories: selectedCategories,
        email: '',
        name: _nameController.text,
        surname: _surnameController.text,
        username: _usernameController.text,
        uid: AuthService.uid,
        isPublic: isPublic,
      ),
      selectedImagePath,
      selectedImagePath != null,
      _oldIsPublic != isPublic,
...
